--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,6 @@ mybatis:
     use-generated-keys: true
   mapper-locations:
     - classpath:com/devjaws/instagramclone/**/maps/*.xml
-    - classpath:Page.xml
 
 server:
   port: 8000
@@ -22,9 +21,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/????serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: ???
-    password: ???
+    url: jdbc:mysql://localhost:3306/insta?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: gyu
+    password: gyu1234
 
   mvc:
     view:
