--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,11 +21,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/insta?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3307/insta1?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: gyu
     password: gyu1234
- #   initialization-mode: always
- #   data: classpath:schema.sql
 
   mvc:
     view:
