--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,10 +18,11 @@ server:
     context-path: /
     encoding:
       charset: UTF-8
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/insta1?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/insta?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: gyu
     password: gyu1234
 
